--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
 <body font-family: "Computer Modern";>
 <p> </p>
-<p align=center><span style="font-size: 200%;"><strong>Binding Energy dataset for NH<sub>3</sub></strong></span></p>
+<p align=center><span style="font-size: 200%;"><strong>Binding Energy dataset for H<sub>2</sub>O</strong></span></p>
 <p align=center>Click on the ZPE corrected Binding Energy value to display on the Jmol applet, and start to use Jmol, the complex between water and the water cluster. The Values are sorted from the lower to higher and are in kJ/mol unit.</p>
   <p align=center>The BE are computed at ONIOM(DLPNO-CCSD(T)/aug-cc-pvtz:xTB-GFN2)//ONIOM(B97-3c:xTB-GFN2) level. To see the zone treated with higher accuracy via ONIOM method click on "zoom". </p>
   <p align=center>The bare water cluster can be display clicking on this <a href="#" onclick="jmolScript('load structures/bare_grain.xyz');" style="text-decoration:none">link</a> and the bare water on this <a href="#" onclick="jmolScript('load structures/h2o.xyz');" style="text-decoration:none">link</a>.</p>
